# yolo-viewer-fastapi

./: .gitignore  READM.md  README.md  start.sh
backend/: main.py  pyproject.toml
backend/fastapi/: __init__.py  responses.py  testclient.py
backend/fastapi/middleware/: cors.py
backend/pydantic/: __init__.py
backend/tests/: test_main.py
dataset/: classes.txt
dataset/labels/: 0015.txt  0016.txt  0017.txt
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/lib/: bbox.test.ts  bbox.ts
