[project]
name = "yolo-viewer-backend"
version = "0.1.0"
description = "FastAPI backend for the YOLO annotation viewer"
authors = [{ name = "YOLO Viewer Maintainers" }]
readme = "../README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110,<0.112",
    "uvicorn[standard]>=0.24,<0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
