[project]
name = "yolo-viewer-backend"
version = "0.1.0"
description = "FastAPI backend for the YOLO annotation viewer"
authors = [{ name = "YOLO Viewer Maintainers" }]
readme = "../README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
